<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent">
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:scrollbars="vertical"
    tools:context=".ui.extensionfragment.ExtensionFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:orientation="horizontal"
        android:weightSum="3">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_weight="1"
            android:text="@string/amount"
            android:layout_marginEnd="16dp" />

        <EditText
            android:id="@+id/txtAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/txtResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_weight="1"
            android:textSize="18sp"
           >

        </TextView>
    </LinearLayout>

    <Button
        android:layout_marginTop="16dp"
        android:layout_gravity="center"
        android:id="@+id/btnFormatAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/format_amount">

    </Button>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:orientation="horizontal"
        android:weightSum="3">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_weight="1"
            android:text="@string/date"
            android:layout_marginEnd="16dp">

        </TextView>

        <EditText
            android:id="@+id/txtDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/txtResultDate"
            android:layout_marginLeft="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_weight="1"
            android:textSize="18sp"
            >

        </TextView>
    </LinearLayout>

    <Button
        android:layout_marginTop="16dp"
        android:layout_gravity="center"
        android:id="@+id/btnFormatDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/format_date">

    </Button>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:orientation="horizontal"
        android:weightSum="3">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_weight="1"
            android:text="formatText"
            android:layout_marginEnd="16dp">

        </TextView>

        <EditText
            android:id="@+id/txtText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />


    </LinearLayout>

    <Button
        android:layout_marginTop="16dp"
        android:layout_gravity="center"
        android:id="@+id/btnFormatText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_style">

    </Button>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:orientation="horizontal"
        android:weightSum="3">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_weight="1"
            android:text="@string/phone_number">

        </TextView>

        <EditText
            android:id="@+id/txtPhoneNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />


    </LinearLayout>
    <TextView
        android:id="@+id/txtResultValidation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_gravity="center"
        android:textColor="@color/red_dark"
        android:layout_weight="1"
        >

    </TextView>
    <Button
        android:layout_marginTop="16dp"
        android:layout_gravity="center"
        android:id="@+id/btnValidatePhoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/validate_phone_number">

    </Button>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical"
        android:gravity="center"
        >

        <TextView
            android:id="@+id/txtResultConnection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:textStyle="bold"
            android:textColor="@color/red_dark"
            />
        <Button
            android:layout_marginTop="16dp"


            android:layout_marginBottom="16dp"
            android:id="@+id/btnCheckConnection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check_connectivity">

        </Button>
    </LinearLayout>
</LinearLayout>
</ScrollView>